Fix for page transitions.

--- a/ConfluxMobile/Conflux.UI/Views/LoginPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/LoginPage.xaml
@@ -2,7 +2,6 @@
     x:Class="Conflux.UI.Views.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Conflux.UI.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -11,7 +10,8 @@
     <Grid>
         <Grid.ChildrenTransitions>
             <TransitionCollection>
-                <EntranceThemeTransition/>
+                <EntranceThemeTransition FromHorizontalOffset="0" 
+                                         FromVerticalOffset="50"/>
             </TransitionCollection>
         </Grid.ChildrenTransitions>
         <Grid.RowDefinitions>
