--- a/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
@@ -9,20 +9,11 @@
 
     <Page.Transitions>
         <TransitionCollection>
-            <NavigationThemeTransition>
-                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
-                    <CommonNavigationTransitionInfo IsStaggeringEnabled="True"/>
-                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
-            </NavigationThemeTransition>
+            <EdgeUIThemeTransition Edge="Bottom"/>
         </TransitionCollection>
     </Page.Transitions>
-
+    
     <Grid>
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <EntranceThemeTransition/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
