--- a/ConfluxMobile/Conflux.UI/Views/SearchPreferencesPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/SearchPreferencesPage.xaml
@@ -10,7 +10,8 @@
     <Grid>
         <Grid.ChildrenTransitions>
             <TransitionCollection>
-                <EntranceThemeTransition/>
+                <EntranceThemeTransition FromHorizontalOffset="50"
+                                         FromVerticalOffset="0"/>
             </TransitionCollection>
         </Grid.ChildrenTransitions>
 
