Fixed page navigation transition issue.

--- a/ConfluxMobile/Conflux.UI/Views/LoginPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/LoginPage.xaml
@@ -7,6 +7,14 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Transitions>
+        <TransitionCollection>
+            <EntranceThemeTransition FromHorizontalOffset="0"
+                                     FromVerticalOffset="50" 
+                                     IsStaggeringEnabled="True"/>
+        </TransitionCollection>
+    </Page.Transitions>
+
     <Grid>
         <Grid.ChildrenTransitions>
             <TransitionCollection>
