--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -4,7 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="using:Conflux.UI.Converters"
+    xmlns:converters="using:Conflux.UI.Converters" 
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:local="using:Conflux.UI.ViewModels"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -68,15 +71,19 @@
                 <HubSection Header="WHAT'S NEW" Loaded="OnNewestEventsSectionLoaded">
                     <DataTemplate>
                         <ListView x:Name="NewestEventsListView" ItemsSource="{Binding NewestEvents}">
-                            <ListView.Items>
-                                <TransitionCollection>
-                                    <EdgeUIThemeTransition Edge="Top"/>
-                                </TransitionCollection>
-                            </ListView.Items>
                             <ListView.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid Margin="0, 10" FlyoutBase.AttachedFlyout="{StaticResource NewestEventFlyout}"
-                                          Holding="OnNewestEventItemHolding">
+                                    <Grid Margin="0, 10" FlyoutBase.AttachedFlyout="{StaticResource NewestEventFlyout}">
+                                        <interactivity:Interaction.Behaviors>
+                                            <core:EventTriggerBehavior EventName="Holding">
+                                                <local:OpenEventFlyoutAction />
+                                            </core:EventTriggerBehavior>
+                                        </interactivity:Interaction.Behaviors>
+                                        <Grid.ChildrenTransitions>
+                                            <TransitionCollection>
+                                                <AddDeleteThemeTransition />
+                                            </TransitionCollection>
+                                        </Grid.ChildrenTransitions>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto"/>
                                             <RowDefinition Height="Auto"/>
