Refactoring : Events are now loaded based on a paged approach using ISupportIncrementalLoading.

--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -68,7 +68,7 @@
                         </StackPanel>
                     </DataTemplate>
                 </HubSection>
-                <HubSection Header="NEARBY" Loaded="OnNewestEventsSectionLoaded">
+                <HubSection Header="NEARBY">
                     <DataTemplate>
                         <ListView x:Name="NewestEventsListView" ItemsSource="{Binding NewestEvents}">
                             <ListView.ItemTemplate>
