--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -70,7 +70,8 @@
                 </HubSection>
                 <HubSection Header="NEARBY">
                     <DataTemplate>
-                        <ListView x:Name="NewestEventsListView" ItemsSource="{Binding NewestEvents}">
+                        <ListView x:Name="NewestEventsListView" ItemsSource="{Binding NewestEvents}"
+                                  SelectionChanged="OnNearbyEventsListSelectionChanged">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Margin="0, 10" FlyoutBase.AttachedFlyout="{StaticResource NewestEventFlyout}">
@@ -101,7 +102,8 @@
                                                    Padding="10, 0, 5, 2"
                                                    TextTrimming="CharacterEllipsis"
                                                    FontSize="22"
-                                                   Text="{Binding Title}"/>
+                                                   Text="{Binding Title}"
+                                                   ContinuumNavigationTransitionInfo.IsExitElement="True"/>
                                         <TextBlock Grid.Row="1" Grid.Column="1" Padding="10, 2, 5, 5"
                                                    Visibility="{Binding StartTime, Converter={StaticResource NullToVisibilityConverter}}"
                                                    Text="{Binding StartTime}"
