--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -20,7 +20,6 @@
     <Page.Resources>
         <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
         <converters:BoolToColorConverter x:Key="VisitedEventColorConverter"/>
-        <converters:BoolToSoubleConverter x:Key="VisitedOpacityConverter"/>
         <MenuFlyout x:Key="NewestEventFlyout">
             <MenuFlyoutItem Text="add to blacklist" Click="OnNewestEventContextMenuClicked"/>
         </MenuFlyout>
@@ -98,8 +97,7 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Margin="0, 5, 0, 3"
-                                              Background="{Binding Visited, Converter={StaticResource VisitedEventColorConverter}}"
-                                              Opacity="{Binding Visited, Converter={StaticResource VisitedOpacityConverter}, ConverterParameter=0.8}">
+                                              Background="{Binding Visited, Converter={StaticResource VisitedEventColorConverter}}">
                                         </Grid>
                                         <TextBlock Grid.Row="0" Grid.Column="1"
                                                    Padding="10, 0, 5, 2"
@@ -110,11 +108,11 @@
                                         <TextBlock Grid.Row="1" Grid.Column="1" Padding="10, 2, 5, 5"
                                                    Visibility="{Binding StartTime, Converter={StaticResource NullToVisibilityConverter}}"
                                                    Text="{Binding StartTime}"
-                                                   Opacity="0.8"/>
+                                                   Foreground="{StaticResource PhoneMidBrush}"/>
                                         <TextBlock Grid.Row="2" Grid.Column="1" Padding="10, 2, 5, 5"
                                                    Visibility="{Binding EndTime, Converter={StaticResource NullToVisibilityConverter}}"
                                                    Text="{Binding EndTime}"
-                                                   Opacity="0.8"/>
+                                                   Foreground="{StaticResource PhoneMidBrush}"/>
                                         <TextBlock Grid.Row="3" Grid.Column="1" Padding="10, 2, 5, 2"
                                                    Visibility="{Binding Location, Converter={StaticResource NullToVisibilityConverter}}"
                                                    TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
