--- a/ConfluxMobile/Conflux.UI/Views/MyEventsPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MyEventsPage.xaml
@@ -2,9 +2,9 @@
     x:Class="Conflux.UI.Views.MyEventsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Conflux.UI.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:Conflux.UI.Converters"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -13,6 +13,10 @@
             <NavigationThemeTransition/>
         </TransitionCollection>
     </Page.Transitions>
+
+    <Page.Resources>
+        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+    </Page.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -26,8 +30,54 @@
             <TextBlock Text="my events" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
         </StackPanel>
 
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-
+        <Grid Grid.Row="1" Margin="19,9.5,19,0">
+            <ListView ItemsSource="{Binding MyEvents}" 
+                      SelectionChanged="OnMyEventsListSelectionChanged">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="0, 10">
+                            <Grid.ChildrenTransitions>
+                                <TransitionCollection>
+                                    <AddDeleteThemeTransition />
+                                </TransitionCollection>
+                            </Grid.ChildrenTransitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="5"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Margin="0, 5, 0, 3"
+                                              Background="{ThemeResource MidBrush}">
+                            </Grid>
+                            <TextBlock Grid.Row="0" Grid.Column="1"
+                                                   Padding="10, 0, 5, 2"
+                                                   TextTrimming="CharacterEllipsis"
+                                                   FontSize="22"
+                                                   Text="{Binding Event.Title}"
+                                                   ContinuumNavigationTransitionInfo.IsExitElement="True"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Padding="10, 2, 5, 5"
+                                                   Visibility="{Binding Event.StartTime, Converter={StaticResource NullToVisibilityConverter}}"
+                                                   Text="{Binding Event.StartTime}"
+                                                   Foreground="{StaticResource MidBrush}"/>
+                            <TextBlock Grid.Row="2" Grid.Column="1" Padding="10, 2, 5, 5"
+                                                   Visibility="{Binding Event.EndTime, Converter={StaticResource NullToVisibilityConverter}}"
+                                                   Text="{Binding Event.EndTime}"
+                                                   Foreground="{StaticResource MidBrush}"/>
+                            <TextBlock Grid.Row="3" Grid.Column="1" Padding="10, 0, 5, 2"
+                                                   Visibility="{Binding Event.Location, Converter={StaticResource NullToVisibilityConverter}}"
+                                                   TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
+                                                   FontSize="16"
+                                                   Text="{Binding Event.Location.Name}"
+                                                   MaxLines="2"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
     </Grid>
 </Page>
