--- a/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
@@ -6,8 +6,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:maps="using:Windows.UI.Xaml.Controls.Maps"
     xmlns:local="using:Conflux.UI"
+    xmlns:converters="using:Conflux.UI.Converters"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Loaded="OnPageLoaded">
+
+    <Page.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </Page.Resources>
 
     <Page.Transitions>
         <TransitionCollection>
@@ -76,33 +82,72 @@
                        ContinuumNavigationTransitionInfo.IsEntranceElement="True" />
             </StackPanel>
 
-            <Grid Grid.Row="1" Margin="0,-6.5, 0, 5" >
-                <Pivot x:Name="EventDetailsPivot" SelectionChanged="OnEventPivotSelectionChanged" >
-                    <PivotItem Header="details" >
-                        <ScrollViewer ZoomMode="Disabled" HorizontalScrollMode="Disabled">
-                            <Grid>
-                                <StackPanel x:Name="MoreDescriptionPanel">
-                                    <TextBlock local:TextBlockExtension.FormattedText="{Binding Description}" FontSize="16" 
-                                               TextWrapping="Wrap" MaxLines="8"/>
-                                    <TextBlock Text="Show more" 
+            <Grid Grid.Row="1" Margin="0, 10, 0, 5" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <maps:MapControl x:Name="LocationMap" Grid.Row="0"
+                                     Height="220" 
+                                     MapServiceToken="cXpfbMzhrd_e1xcrA_iAuA"/>
+                    <Hub Grid.Row="1" Margin="0, 25, 0, 0">
+                        <HubSection Header="ABOUT" x:Name="AboutHubSection">
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid x:Name="ShortDescriptionPanel" Grid.Row="0">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*"/>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Grid.Row="0" 
+                                                   local:TextBlockExtension.FormattedText="{Binding ShortDescription}" FontSize="16" 
+                                                   TextWrapping="Wrap"/>
+                                        <TextBlock Grid.Row="1" Text="Show more" Visibility="{Binding IsDescriptionTooLong, Converter={StaticResource BoolToVisibilityConverter}}"
                                                FontSize="16" Foreground="{StaticResource PhoneAccentBrush}"
-                                               Tapped="OnResizeMoreTapped"/>
-                                </StackPanel>
-                                <StackPanel x:Name="LessDescriptionPanel" Visibility="Collapsed">
-                                    <TextBlock local:TextBlockExtension.FormattedText="{Binding Description}" FontSize="16" 
-                                               TextWrapping="Wrap"/>
-                                    <TextBlock Text="Show less" 
-                                               FontSize="16" Foreground="{StaticResource PhoneAccentBrush}"
-                                               Tapped="OnResizeLessTapped"/>
-                                </StackPanel>
-                            </Grid>
-                        </ScrollViewer>
-                    </PivotItem>
-                    <PivotItem x:Name="MapPivotItem" Header="map" >
-                        <maps:MapControl x:Name="LocationMap" MapServiceToken="cXpfbMzhrd_e1xcrA_iAuA" >
-                        </maps:MapControl>
-                    </PivotItem>
-                </Pivot>
+                                               Tapped="OnShowMoreTapped"/>
+                                    </Grid>
+                                    <Grid x:Name="FullDescriptionPanel" Grid.Row="1"
+                                                Visibility="Collapsed">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*"/>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+                                        <ScrollViewer ZoomMode="Disabled">
+                                            <StackPanel>
+                                                <TextBlock local:TextBlockExtension.FormattedText="{Binding FullDescription}" FontSize="16" 
+                                                           TextWrapping="Wrap"/>
+                                                <TextBlock Text="Show less" Visibility="Visible"
+                                                           FontSize="16" Foreground="{StaticResource PhoneAccentBrush}"
+                                                           Tapped="OnShowLessTapped"/>
+                                            </StackPanel>
+                                        </ScrollViewer>
+                                    </Grid>
+                                </Grid>
+                            </DataTemplate>
+                        </HubSection>
+                        <HubSection Header="RSVP" x:Name="RsvpHubSection" Margin="0, 0, 0, 50">
+                            <DataTemplate>
+                                <ScrollViewer>
+                                    <TextBlock FontSize="16" TextWrapping="Wrap"
+                                    Text="[Not yet implemented] RSVP about the event will be shown here soon."/>
+                                </ScrollViewer>
+                            </DataTemplate>
+                        </HubSection>
+                        <HubSection Header="Statistics" x:Name="StatisticsHubSection" Margin="0, 0, 0, 50">
+                            <DataTemplate>
+                                <ScrollViewer>
+                                    <TextBlock FontSize="16" TextWrapping="Wrap"
+                                    Text="[Not yet implemented] Statistics about the event will be shown here soon."/>
+                                </ScrollViewer>
+                            </DataTemplate>
+                        </HubSection>
+                    </Hub>
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
